rewrite the banner section part

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <i class="fa-solid fa-circle-arrow-left fa-2x bg-white text-black rounded-full"></i>
                     <i class="fa-solid fa-circle-arrow-right fa-2x bg-white text-black rounded-full"></i>
                 </div>
-            <div class="absolute top-9 lg:top-44 -right-16 lg:right-[500px]">
+            <div class="absolute top-9 lg:top-44 right-6 lg:right-[500px]">
                 <!--written part-->
                 <div class="flex flex-col justify-center items-center text-center gap-0 lg:gap-4 mb-72">
                     <h1 class="lato font-medium lg:font-extrabold text-2xl lg:text-7xl text-white">Exotic tastes at
@@ -136,20 +136,20 @@
                         Now</button>
                 </div>
                 <!--Fruit Box part-->
-                <div class="flex justify-evenly gap-28 items-center bg-white text-center text-black lato lato-bold rounded-lg invisible lg:visible w-full h-52 my-20">
-                    <figure> <img src="/images/fruit1.png">
+                <div class="flex justify-evenly gap-10 lg:gap-28 items-center bg-red-600 lg:bg-white text-center text-black lato lato-bold rounded-lg invisible lg:visible w-full h-52 my-20">
+                    <figure> <img src="/images/fruit1.png" class="w-20 lg:w-full h-20 lg:h-full">
                         <figcaption>Grape</figcaption>
                     </figure>
-                    <figure> <img src="/images/fruit2.png">
+                    <figure> <img src="/images/fruit2.png" class="w-20 lg:w-full h-20 lg:h-full">
                         <figcaption>Orange</figcaption>
                     </figure>
-                    <figure> <img src="/images/fruit3.png">
+                    <figure> <img src="/images/fruit3.png" class="w-20 lg:w-full h-20 lg:h-full">
                         <figcaption>Mango</figcaption>
                     </figure>
-                    <figure> <img src="/images/fruit4.png">
+                    <figure> <img src="/images/fruit4.png" class="w-20 lg:w-full h-20 lg:h-full">
                         <figcaption>Strawberry</figcaption>
                     </figure>
-                    <figure> <img src="/images/fruit5.png">
+                    <figure> <img src="/images/fruit5.png" class="w-20 lg:w-full h-20 lg:h-full">
                         <figcaption>Pomegranate</figcaption>
                     </figure>
                 </div>
@@ -271,7 +271,7 @@
         </section>
 
         <!--Deal of Section-->
-        <section class="mx-auto lg:mx-56 bg-white">
+        <section class="bg-white mx-auto lg:mx-56">
             <div>
                 <div class="flex justify-between text-center lg:text-start items-center lg: flex-col lg:flex-row">
                     <!--left-->
@@ -384,22 +384,22 @@
         </section>
 
         <!--Meet the team Section-->
-        <section class="mx-auto lg:mx-56 bg-white relative">
+        <section class="bg-white mx-auto lg:mx-56 relative">
             <div>
                 <div class="bg-black">
                     <img src="/images/banner1.png" class="w-full h-screen lg:h-full opacity-60">
                 </div>
+                <!--Written and Team full Part-->
+                <div class="absolute top-44 left-96">
                     <!--Written Part-->
-                <div class="absolute top-6 left-32 text-center text-white w-auto">
-                    <h1 class="lato font-extrabold text-2xl lg:text-5xl">Meet the team section</h1>
-                    <p class="lato font-medium text-sm lg:text-bas">Contrary to popular belief, is not simply random
-                        text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000
-                        years old.</p>
+                <div class="text-center text-white pb-44">
+                    <h1 class="lato font-extrabold text-3xl lg:text-5xl pb-6">Meet the team section</h1>
+                    <p class="lato font-medium text-base lg:text-lg leading-7">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
                 </div>
 
                     <!--Team members Part-->
                     <div class="flex justify-evenly flex-col lg:flex-row">
-                        <div class="text-center text-pink-900">
+                        <div class="text-center text-white">
                         <div class="flex justify-center">
                             <img src="/images/member1.png" class="rounded-full"></img>
                         </div>
@@ -451,6 +451,7 @@
                         </div>
                         </div>
                     </div>
+                </div>
         </div>
         </section>
 
