completed the website with responsive

--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
                 <h5>All Fruits</h5>
             </div>
 
-            <div
-                class="lato-extrabold lg:lato-bold text-black lg:text-white flex items-center justify-center gap-52 lg:gap-0 -mx-52 lg:-mx-0">
+            <div class="lato-extrabold lg:lato-bold text-black lg:text-white flex items-center justify-center gap-32 lg:gap-0 -mx-52 lg:-mx-0">
                 <div class="flex items-center gap-3">
                     <img src="/images/logo.png">
                     <h3 class="text-xs lg:text-xl">Fruit Burst</h3>
@@ -121,13 +120,13 @@
                         <img src="images/banner1.png" class="opacity-60 w-full">
                     </div>
                 <!--icon part-->
-                <div class="flex justify-between relative bottom-24 lg:bottom-80 mx-10 lg:mx-24">
+                <div class="flex justify-between relative bottom-24 lg:bottom-80 mx-10 lg:mx-24 order-2">
                     <i class="fa-solid fa-circle-arrow-left fa-2x bg-white text-black rounded-full"></i>
                     <i class="fa-solid fa-circle-arrow-right fa-2x bg-white text-black rounded-full"></i>
                 </div>
-            <div class="absolute top-9 lg:top-44 right-6 lg:right-[500px]">
+            <div class="flex flex-col justify-center w-full absolute top-9 lg:top-28">
                 <!--written part-->
-                <div class="flex flex-col justify-center items-center text-center gap-0 lg:gap-4 mb-72">
+                <div class="flex flex-col justify-center items-center text-center gap-0 lg:gap-4 mb-20">
                     <h1 class="lato font-medium lg:font-extrabold text-2xl lg:text-7xl text-white">Exotic tastes at
                         your<br>doorstep</h1>
                     <p class="lato font-medium text-sm lg:text-xl text-white py-2 lg:py-6">We supply highly quality organic products</p>
@@ -135,24 +134,27 @@
                         class="btn btn-xs bg-btnclr text-white lato font-medium lg:font-extrabold text-sm lg:text-xl sm:btn-sm md:btn-md lg:btn-lg">Shop
                         Now</button>
                 </div>
-                <!--Fruit Box part-->
-                <div class="flex justify-evenly gap-10 lg:gap-28 items-center bg-red-600 lg:bg-white text-center text-black lato lato-bold rounded-lg invisible lg:visible w-full h-52 my-20">
-                    <figure> <img src="/images/fruit1.png" class="w-20 lg:w-full h-20 lg:h-full">
+                <!--Fruit-Box part-->
+                <div class="flex justify-center w-full">
+                    <div class="flex justify-evenly items-center bg-white text-center text-black lato lato-bold rounded-lg invisible lg:visible w-4/5 h-52">
+                    <figure> <img src="/images/fruit1.png" class="w-1/2 lg:w-full h-20 lg:h-full">
                         <figcaption>Grape</figcaption>
                     </figure>
-                    <figure> <img src="/images/fruit2.png" class="w-20 lg:w-full h-20 lg:h-full">
+                    <figure> <img src="/images/fruit2.png" class="w-1/2 lg:w-full h-20 lg:h-full">
                         <figcaption>Orange</figcaption>
                     </figure>
-                    <figure> <img src="/images/fruit3.png" class="w-20 lg:w-full h-20 lg:h-full">
+                    <figure> <img src="/images/fruit3.png" class="w-1/2 lg:w-full h-20 lg:h-full">
                         <figcaption>Mango</figcaption>
                     </figure>
-                    <figure> <img src="/images/fruit4.png" class="w-20 lg:w-full h-20 lg:h-full">
+                    <figure> <img src="/images/fruit4.png" class="w-1/2 lg:w-full h-20 lg:h-full">
                         <figcaption>Strawberry</figcaption>
                     </figure>
-                    <figure> <img src="/images/fruit5.png" class="w-20 lg:w-full h-20 lg:h-full">
+                    <figure> <img src="/images/fruit5.png" class="w-1/2 lg:w-full h-20 lg:h-full">
                         <figcaption>Pomegranate</figcaption>
                     </figure>
                 </div>
+            </div>
+
             </div>
 
             </div>
@@ -307,13 +309,14 @@
                 </div>
                 <!--Fruits Sidebar-->
                 <div class="grid grid-rows-1 lg:grid-cols-4 justify-center gap-3">
-                    <!--flex justify-center justify-evenly-->
+                    <!--flex justify-center justify-evenly*********************************-->
                     <!--Apple-->
-                    <div class="text-center border-2 border-gray-300 w-96 lg:w-auto">
+                    <div class="text-center border-2 border-gray-300 w-auto py-10">
                         <div class="flex justify-center">
                             <img src="/images/fruit6.png">
                         </div>
                         <h2 class="lato font-bold text-2xl text-black">12.90$ - 18.85$</h2>
+                        <p>_________________________________</p>
                         <p class="lato font-medium text-base text-gray-500">Apples</p>
                         <div>
                             <i class="fa-solid fa-star text-btnclr"></i>
@@ -326,11 +329,12 @@
                     </div>
 
                     <!--Orange-->
-                    <div class="text-center border-2 border-gray-300 w-96 lg:w-auto">
+                    <div class="text-center border-2 border-gray-300 w-auto py-10">
                         <div class="flex justify-center">
                             <img src="/images/fruit7.png">
                         </div>
                         <h2 class="lato font-bold text-2xl text-black">12.90$ - 18.85$</h2>
+                        <p>_________________________________</p>
                         <p class="lato font-medium text-base text-gray-500">Orange</p>
                         <div>
                             <i class="fa-solid fa-star text-btnclr"></i>
@@ -343,11 +347,12 @@
                     </div>
 
                     <!--Red Dragon-->
-                    <div class="text-center border-2 border-gray-300 w-96 lg:w-auto">
+                    <div class="text-center border-2 border-gray-300 w-auto py-10">
                         <div class="flex justify-center">
                             <img src="/images/fruit8.png">
                         </div>
                         <h2 class="lato font-bold text-2xl text-black">12.90$ - 18.85$</h2>
+                        <p>_________________________________</p>
                         <p class="lato font-medium text-base text-gray-500">Red Dragon </p>
                         <div>
                             <i class="fa-solid fa-star text-btnclr"></i>
@@ -360,11 +365,12 @@
                     </div>
 
                     <!--Banana-->
-                    <div class="text-center border-2 border-gray-300 w-96 lg:w-auto">
+                    <div class="text-center border-2 border-gray-300 w-screen lg:w-auto py-10">
                         <div class="flex justify-center">
                             <img src="/images/fruit9.png">
                         </div>
                         <h2 class="lato font-bold text-2xl text-black">12.90$ - 18.85$</h2>
+                        <p>_________________________________</p>
                         <p class="lato font-medium text-base text-gray-500">Banana</p>
                         <div>
                             <i class="fa-solid fa-star text-btnclr"></i>
@@ -387,36 +393,36 @@
         <section class="bg-white mx-auto lg:mx-56 relative">
             <div>
                 <div class="bg-black">
-                    <img src="/images/banner1.png" class="w-full h-screen lg:h-full opacity-60">
+                    <img src="/images/banner1.png" class="w-full h-lvh lg:h-full opacity-60">
                 </div>
                 <!--Written and Team full Part-->
-                <div class="absolute top-44 left-96">
+                <div class="absolute flex flex-col justify-center top-10 w-full">
                     <!--Written Part-->
-                <div class="text-center text-white pb-44">
+                <div class="text-center text-white pb-10 lg:pb-20">
                     <h1 class="lato font-extrabold text-3xl lg:text-5xl pb-6">Meet the team section</h1>
-                    <p class="lato font-medium text-base lg:text-lg leading-7">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                    <p class="lato font-medium text-base lg:text-lg leading-7">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
                 </div>
 
                     <!--Team members Part-->
-                    <div class="flex justify-evenly flex-col lg:flex-row">
-                        <div class="text-center text-white">
+                    <div class="flex justify-evenly justify-center flex-col md:flex-row lg:flex-row">
+                        <div class="text-center text-white w-svw lg:w-fit">
                         <div class="flex justify-center">
-                            <img src="/images/member1.png" class="rounded-full"></img>
+                            <img src="/images/member1.png" class="rounded-full w-16 lg:w-full"></img>
                         </div>
-                        <h1 class="lato font-bold text-2xl">Awlad Hussain</h1>
+                        <h1 class="lato font-semibold text-2xl">Awlad Hussaine</h1>
                         <p class="lato font-medium text-base">Fruit Expert</p>
                         <div>
                             <i class="fa-brands fa-facebook bg-white text-btnclr rounded-full"></i>
-                            <i class="fa-brands fa-twitter bg-btnclr text-white rounded-full"></i>
-                            <i class="fa-brands fa-linkedin-in bg-btnclr text-white rounded-full"></i>
+                            <i class="fa-brands fa-twitter bg-btnclr rounded-full"></i>
+                            <i class="fa-brands fa-linkedin-in bg-btnclr rounded-full"></i>
                         </div>
                         </div>
 
-                        <div class="text-center">
+                        <div class="text-center text-white w-svw lg:w-fit">
                         <div class="flex justify-center">
-                            <img src="/images/member2.png" class="rounded-full"></img>
+                            <img src="/images/member2.png" class="rounded-full w-16 lg:w-full"></img>
                         </div>
-                        <h1 class="lato font-bold text-2xl text-white">Safia Chowdhury</h1>
+                        <h1 class="lato font-semibold text-2xl">Safia Chowdhury</h1>
                         <p class="lato font-medium text-base text-white">Fruit Expert</p>
                         <div>
                             <i class="fa-brands fa-facebook bg-white text-btnclr rounded-full"></i>
@@ -425,29 +431,29 @@
                         </div>
                         </div>
 
-                        <div class="text-center">
+                        <div class="text-center text-white w-svw lg:w-fit">
                         <div class="flex justify-center">
-                            <img src="/images/member3.png" class="rounded-full"></img>
+                            <img src="/images/member3.png" class="rounded-full w-16 lg:w-full"></img>
                         </div>
-                        <h1 class="lato font-bold text-2xl text-white">Rokib Hossain</h1>
-                        <p class="lato font-medium text-base text-white">Fruit Expert</p>
+                        <h1 class="lato font-semibold text-2xl">Rokib Hossaine</h1>
+                        <p class="lato font-medium text-base">Fruit Expert</p>
                         <div>
                             <i class="fa-brands fa-facebook bg-white text-btnclr rounded-full"></i>
-                            <i class="fa-brands fa-twitter bg-btnclr text-white rounded-full"></i>
-                            <i class="fa-brands fa-linkedin-in bg-btnclr text-white rounded-full"></i>
+                            <i class="fa-brands fa-twitter bg-btnclr rounded-full"></i>
+                            <i class="fa-brands fa-linkedin-in bg-btnclr rounded-full"></i>
                         </div>
                         </div>
                         
-                        <div class="text-center">
+                        <div class="text-center text-white w-svw lg:w-fit">
                         <div class="flex justify-center">
-                            <img src="/images/member4.png" class="rounded-full"></img>
+                            <img src="/images/member4.png" class="rounded-full w-16 lg:w-full"></img>
                         </div>
-                        <h1 class="lato font-bold text-2xl text-white">Chaity</h1>
-                        <p class="lato font-medium text-base text-white">Fruit Expert</p>
+                        <h1 class="lato font-semibold text-2xl">Chaity khanom</h1>
+                        <p class="lato font-medium text-base">Fruit Expert</p>
                         <div>
                             <i class="fa-brands fa-facebook bg-white text-btnclr rounded-full"></i>
-                            <i class="fa-brands fa-twitter bg-btnclr text-white rounded-full"></i>
-                            <i class="fa-brands fa-linkedin-in bg-btnclr text-white rounded-full"></i>
+                            <i class="fa-brands fa-twitter bg-btnclr rounded-full"></i>
+                            <i class="fa-brands fa-linkedin-in bg-btnclr rounded-full"></i>
                         </div>
                         </div>
                     </div>
@@ -459,11 +465,11 @@
         <section class="mx-auto lg:mx-56 bg-white">
         <div class="text-center">
             <h1 class="lato font-extrabold text-5xl text-black py-3">Why Choose Us</h1>
-            <p class="lato font-medium text-base text-paraclr w-[300px] lg:w-[630px] mx-auto ">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old </p>
+            <p class="lato font-medium text-base text-paraclr w-[300px] lg:w-[630px] mx-auto">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old </p>
         </div>
 
         <!--three parts div-->
-        <div class="grid grid-rows-1 lg:grid-cols-3 justify-center gap-6">
+        <div class="grid grid-rows-1 lg:grid-cols-3 justify-center gap-16 lg:gap-20">
 <div>
         <div class="flex flex-col lg:flex-row items-center gap-6 py-5 text-center lg:text-start">
             <i class="fa-solid fa-users flex bg-gray-300 rounded-full text-black w-14 h-14 justify-center items-center"></i>
@@ -490,7 +496,7 @@
             </div>
         </div>
 </div>
-<div class="py-6 w-auto h-auto">
+<div class="py-6 w-fit h-fit">
     <img src="images/whychoose1.png">
 </div>
 <div>
@@ -529,7 +535,7 @@
         <img src="/images/logo.png">
         <h1 class="lato font-bold text-4xl text-white">Fruit Burst</h1>
         </div>
-        <div class="flex justify-center gap-6 lg:gap-20 lato font-semibold text-lg text-white py-3">
+        <div class="flex justify-center flex-wrap gap-6 lg:gap-20 lato font-semibold text-lg text-white py-3">
             <h3>Home</h3>
             <h3>About Us</h3>
             <h3>Shop</h3>
@@ -537,7 +543,7 @@
             <h3>Support</h3>
             <h3>My Account</h3>
         </div>
-        <div class="flex justify-center gap-16 py-3">
+        <div class="flex justify-center gap-8 lg:gap-16 py-3">
             <i class="fa-brands fa-twitter w-auto h-full text-white"></i>
             <i class="fa-brands fa-facebook w-auto h-full text-white bg-blue-700 rounded-full"></i>
             <i class="fa-brands fa-youtube w-auto h-full text-white bg-red-700 rounded-full"></i>
